--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10644,6 +10644,186 @@ a.text-dark:focus {
   }
 }
 
+.welcome_background {
+  width: 100%;
+}
+
+.welcome_text {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Segoe UI", Arial, sans-serif;
+  color: white;
+  font-size: 27px;
+  font-weight: bold;
+  line-height: 32px;
+  margin-bottom: 16px;
+  margin-top: 32px;
+  width: 65%;
+}
+
+.welcome_sub {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Segoe UI", Arial, sans-serif;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 32px;
+  margin-bottom: 16px;
+  margin-top: 32px;
+  width: 65%;
+}
+
+.hhouse_text {
+  font-size: 27px;
+  line-height: 32px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: bold;
+  color: black;
+  width: 65%;
+  margin-left: 100px;
+}
+
+.hhouse_subtext {
+  font-size: 18px;
+  line-height: 32px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-weight: bold;
+  color: black;
+  width: 65%;
+  margin-left: 100px;
+}
+
+.main-logo {
+  width: 40px;
+}
+
+.login-crow img {
+  width: 30%;
+  float: left;
+}
+
+.welcome {
+  color: #1da1f2;
+  font-size: 25px;
+  float: right;
+}
+
+.login-logo img {
+  width: 10px;
+}
+
+.side-nav {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  font-size: 20px;
+  text-align: center;
+  font-family: "Segoe UI", Arial, sans-serif;
+  color: #1da1f2;
+  margin: 0px;
+  padding: 0px;
+}
+
+.btn-w {
+  width: 100%;
+  padding: 5px;
+}
+
+.reg-logo {
+  position: relative;
+  text-align: center;
+}
+
+.tweet-area {
+  border-style: solid;
+  border-color: #e6ecf0;
+  border-width: 2px;
+  padding: 20px;
+  padding-bottom: 50px;
+  border-bottom-width: 10px;
+  font-family: "Segoe UI", Arial, sans-serif;
+  font-size: 20px;
+}
+
+.tweet-feed {
+  border-style: solid;
+  border-color: #e6ecf0;
+  border-width: 2px;
+  padding: 20px;
+  font-family: "Segoe UI", Arial, sans-serif;
+}
+
+body {
+  background-color: white;
+}
+
+.small-icon {
+  width: 30px;
+}
+
+.username {
+  font-weight: bold;
+  padding: 0px;
+}
+
+.username span {
+  font-weight: normal;
+}
+
+.form-control {
+  font-size: 25px;
+}
+
+.cluck-it-btn {
+  position: absolute;
+  left: 530px;
+}
+
+.comment {
+  border-width: 2px;
+  border-style: solid;
+  border-color: #e6ecf0;
+}
+
+.tweet-area-total {
+  width: 650px;
+  word-wrap: break-word;
+}
+
+.top-of-feed {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #e6ecf0;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background-color: white;
+}
+
+.top-of-feed h1 {
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px;
+  margin: 0px;
+}
+
+.left-bar a {
+  font-family: "Segoe UI", Arial, sans-serif;
+  color: black;
+  font-weight: bold;
+}
+
+.roost {
+  position: relative;
+  right: 25px;
+}
+
 .song-liked {
   background: lime;
 }
