--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10661,6 +10661,7 @@ a.text-dark:focus {
   margin-bottom: 16px;
   margin-top: 32px;
   width: 65%;
+  padding-bottom: 10%;
 }
 
 .welcome_sub {
@@ -10676,6 +10677,7 @@ a.text-dark:focus {
   margin-bottom: 16px;
   margin-top: 32px;
   width: 65%;
+  padding-top: 10%;
 }
 
 .hhouse_text {
@@ -10822,6 +10824,48 @@ body {
 .roost {
   position: relative;
   right: 25px;
+}
+
+html,
+body {
+  background-color: #fff;
+  color: #636b6f;
+  font-family: "Nunito", sans-serif;
+  font-weight: 200;
+  height: 100vh;
+  margin: 0;
+}
+
+.full-height {
+  height: 100vh;
+}
+
+.flex-center {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.position-ref {
+  position: relative;
+}
+
+.top-right {
+  position: absolute;
+  right: 10px;
+  top: 18px;
+}
+
+.content {
+  text-align: center;
+}
+
+.title {
+  font-size: 84px;
+}
+
+.m-b-md {
+  margin-bottom: 30px;
 }
 
 .song-liked {
