--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -15,6 +15,7 @@
     margin-bottom: 16px;
     margin-top: 32px;
     width: 65%;
+    padding-bottom: 10%;
 }
 
 .welcome_sub{
@@ -30,6 +31,7 @@
     margin-bottom: 16px;
     margin-top: 32px;
     width: 65%;
+    padding-top: 10%;
 }
 
 .hhouse_text {
@@ -181,4 +183,47 @@ body {
 .roost{
     position:relative;
     right: 25px;
+}
+
+html, body {
+    background-color: #fff;
+    color: #636b6f;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 200;
+    height: 100vh;
+    margin: 0;
+}
+
+.full-height {
+    height: 100vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.position-ref {
+    position: relative;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.content {
+    text-align: center;
+}
+
+.title {
+    font-size: 84px;
+}
+
+
+
+.m-b-md {
+    margin-bottom: 30px;
 }
